# solo-agent-shinobi

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: architecture.md  mvp-design.md  product-spec.md
src/shinobi/: __init__.py  cli.py  config.py  context_builder.py  executor.py  github_client.py  issue_selector.py  merger.py  mission_finalize.py  mission_publish.py  mission_start.py  models.py  reviewer.py  state_store.py
src/shinobi/bootstrap_templates/: __init__.py  review-note-rule.md  review-notes.md  self-review.md
tests/: test_cli.py
