[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "solo-agent-shinobi"
version = "0.1.0"
description = "Single-agent GitHub issue workflow automation."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "solo-agent-shinobi maintainers" }
]

[project.scripts]
shinobi = "shinobi.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
packages = ["shinobi"]

[tool.setuptools.package-data]
shinobi = ["bootstrap_templates/*.md"]
